# nsrllookup

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  README.md  THANKS  _config.yml  aclocal.m4  clean.py  cmakeclean.sh  config.h.in  configure  configure.ac  cross-compile-win32  cross-compile-win64  index.html  index.md  mingw64.cmake  params.json
debian/: README.Debian  changelog  control  copyright  debhelper-build-stamp  files  rules
man/: Makefile.am  Makefile.in  nsrllookup.1
man1/: CMakeLists.txt  nsrllookup.1
packaging/: nsrllookup.spec
src/: CMakeLists.txt  Makefile.am  Makefile.in  README.W32  common.cc  common.hpp  format.sh  nsrllookup  nsrllookup.cc  parse_options.cc  query_server.cc  unix.hpp  win32.hpp
