set(CMAKE_BUILD_TYPE Release)
add_executable(nsrllookup common.cc nsrllookup.cc parse_options.cc query_server.cc)
target_link_libraries(nsrllookup ${Boost_PROGRAM_OPTIONS_LIBRARY})
if (WIN32)
  target_link_libraries(nsrllookup wsock32 ws2_32)
endif()
set_property(TARGET nsrllookup PROPERTY CXX_STANDARD 14)
set_property(TARGET nsrllookup PROPERTY CXX_STANDARD_REQUIRED true)
add_definitions(-DPACKAGE_VERSION="${PACKAGE_VERSION}")
add_definitions(-DPACKAGE_URL="http://rjhansen.github.io/nsrlsvr")
add_definitions(-DPACKAGE_BUGREPORT="rjh@sixdemonbag.org")
install(TARGETS nsrllookup RUNTIME DESTINATION bin)
