find_package(Boost 1.60.0 REQUIRED COMPONENTS program_options)
include_directories($Boost_INCLUDE_DIRS)
set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_MULTITHREADED OFF)
set(Boost_USE_STATIC_RUNTIME ON)
add_executable(nsrllookup common.cc nsrllookup.cc parse_options.cc query_server.cc)
target_link_libraries(nsrllookup ${Boost_PROGRAM_OPTIONS_LIBRARY})
if (WIN32)
  target_link_libraries(nsrllookup wsock32 ws2_32)
endif()
set_property(TARGET nsrllookup PROPERTY CXX_STANDARD 14)
set_property(TARGET nsrllookup PROPERTY CXX_STANDARD_REQUIRED true)
add_definitions(-DPACKAGE_VERSION="${PACKAGE_VERSION}")
add_definitions(-DPACKAGE_URL="http://rjhansen.github.io/nsrlsvr")
add_definitions(-DPACKAGE_BUGREPORT="rjh@sixdemonbag.org")
install(TARGETS nsrllookup RUNTIME DESTINATION bin)
